fiexed the qr code not scanning issue due to the dark mode by making the qr code area still light through dark mode

--- a/frontend/src/pages/css/QRPage.css
+++ b/frontend/src/pages/css/QRPage.css
@@ -32,3 +32,19 @@
     width: auto;
     height: auto;
 }
+
+body.dark-mode .qrpage {
+    background-color: white !important;
+}
+
+body.dark-mode #qrpage-components,
+body.dark-mode #qrpage-name,
+body.dark-mode #qrpage-code {
+    color: black !important;
+}
+
+
+body.dark-mode .qrpage canvas {
+    background-color: white !important;
+    filter: none !important;
+}
